fix json encode demo test failures. (remove charset, timezone, pattern object from source class)